--- a/prj.conf
+++ b/prj.conf
@@ -1,10 +1,17 @@
 CONFIG_USB=y
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_DEVICE_HID=y
-CONFIG_USB_DEVICE_PRODUCT="Zephyr HID mouse sample"
+CONFIG_USB_DEVICE_PRODUCT="Zephyr HID mouse/audio sample"
 
 CONFIG_LOG=y
 CONFIG_USB_DRIVER_LOG_LEVEL_ERR=y
 CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
 
 CONFIG_GPIO=y
+
+#net buf options
+CONFIG_NET_BUF=y
+CONFIG_NET_BUF_USER_DATA_SIZE=0
+
+#USB audio related configs
+CONFIG_USB_DEVICE_AUDIO=y
